SBVTestSuite/TestSuite/CompileTests/SCase/SCase01.stderr
SCase01.hs:11:14: error: [GHC-39584]
    " SCase01.hs:11:19: Parse error: EOF

    " In the quasi-quotation: [sCase| e of|]
   |
11 | t e = [sCase| e of|]
   |              ^^^^^^^

